# metoceviz

./: .gitignore  NOTES.md  README.md  package.json  pyproject.toml  rollup.config.mjs  serve.ts  tsconfig.json
backend/: dataset_model.py  nc2zarr.py  pyproject.toml
backend/scripts/: create_models.sh  install_conda_pkgs.sh  lint.sh  test_all_py.sh
backend/tests/test_visimacli/: test_check_periodic_lon.py  test_format_to_iso.py  test_get_lon-lat_name_for_var.py  test_get_lon_name_for_var.py  test_get_nx.py  test_get_ny.py  test_get_time.py  test_handle_levels.py  test_handle_lonlat.py  test_handle_times.py
backend/vizima/: dataset_model.py  vizimacli.py
demo/: demo.js  demowrflambertnc.js  demowrfpolarstereonc.js  index.html
frontend/: package.json  tsconfig.json
frontend/component/: canvas.ts
frontend/component/globe/: globe.ts
frontend/component/painters/: graticule-painter.ts  painter.ts
frontend/datatype/: grid.ts
frontend/sample_data/: write_zarr.py
frontend/scripts/: dataset-schema.json  export-schema.ts
frontend/vizima/component/: json-data.ts
frontend/vizima/datatype/: dataset.ts  types.ts
scripts/: add_pole_scalar.py  add_pole_wind.py  create_models.sh  dataset-schema.json  download_era5.py  download_ncep_data.sh  export-schema.ts  ncep_reanalysis_reg.griddes  regrid_ncep_data.sh  write2zarr.py
src/: mapviz.ts
src/component/: canvas.ts  globe.ts  graticule-layer.ts  graticule-painter.ts  json-data.ts  land-layer.ts  land-painter.ts  painter.ts  pcolor-painter.ts  types.ts
src/datatype/: dataset.ts  grid.ts
(+43 files in other folders)
