[project]
name = "vizima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cf-xarray>=0.10.10",
    "netcdf4>=1.7.4",
    "questionary>=2.1.1",
    "typer>=0.21.1",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.53.0",
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.mypy]
plugins = ['pydantic.mypy']
